# site_data

./: DISTRIBUTION.md  README.md  manifest.json  sync-manifest.sh
axioms/: the_oracle_imperative.md  the_rats_gambit.md
experiments/maths/: README.md
experiments/maths/fdrs-adaptive-attention/: NEGATIVE.md  README.md  SUMMARY.md  results.md
experiments/maths/fdrs-attention-mixed-radix/: ATLAS.md  FUTURE-DIRECTIONS.md  GLOSSARY.md  INSTRUMENTATION.md  NEGATIVE.md  README.md  SUMMARY.md  THEORY.md  results.md
experiments/maths/fdrs-chart-coupled-attention/: NEGATIVE.md  README.md  SUMMARY.md  THEORY.md  results.md
experiments/maths/fdrs-digit-conditional-activation/: NEGATIVE.md  README.md  results.md
experiments/maths/fdrs-exp38-svg-test/: README.md  fdrs_exp38_kernel_cylinder_radix9_atlas_svg.sage
experiments/maths/fdrs-exp73-image-code-test/: README.md
experiments/maths/fdrs-gpu-numerics/: NEGATIVE.md  README.md  SUMMARY.md  results.md
experiments/maths/fdrs-hj-singularities/: NEGATIVE.md  P4-PUISEUX.md  P5-P7-CONTINUATION.md  README.md  results.md
experiments/maths/fdrs-hj-singularities/source/rust/hj-radix/: Cargo.toml
experiments/maths/fdrs-hj-singularities/source/rust/hj-radix/src/: lib.rs
experiments/maths/fdrs-mcf-threefolds/: M1-draft.md  M2.md  NEGATIVE.md  READING.md  (+3 more)
info/: HYPHAEIC.md  corporate_cybernetics.md  hyphaeicMarineCorp.md
org/: hyphaeicSPC.md  team.md
philosophy/: summary_of_thesis.md
philosophy/axioms/: summary_of_thesis.md
r_and_d/: hyphos.md
r_and_d/fdrs/: p1_formal_verification.md  p2_positional_algebra.md
(+37 files in other folders)
